# shakmaty_python_binding

./: CHANGELOG.md  Cargo.toml  Cargo_save.toml  README.md  main.py  pyproject.toml  setup.py  shakmaty_python_binding.pyi
.github/workflows/: publish.yml  test.yml
src/: binding.rs  lib.rs  position.rs
