[build-system]
requires = ["maturin>=1.4,<2.0","setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "maturin"

[project]
name = "shakmaty_python_binding"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]

[dependencies]
maturin = "1.4.0"
rustimport = "1.4.0"

[tool.maturin]
features = ["pyo3/extension-module"]