
[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "shakmaty_python_binding"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependencies]
maturin = "1.4.0"
rustimport = "1.4.0"

[tool.maturin]
features = ["pyo3/extension-module"]